examples/typechecking/impredicativity.an

id x = x

ids = [freeze id]

auto (x: forall a. fn a -> a) = x (freeze x)

auto_prime (x: forall a. fn a -> a) = x x

f5 = auto (freeze id)

// bad f =
//     f 42, f true  // error expected

poly (f: forall a. fn a -> a) =
    f 42, f true

f9 =
    f = revapp (freeze id)
    f poly

choose (x: a) (y: a) = x

a5 = id auto
a6 = id auto_prime
a6_ = id (freeze auto_prime)

a7 = choose id auto

// args: -e ast-t --no-color
// expected exit status: 1
// expected stdout:
// (id: fn _ -> _) (x: _) = (x: _)
// 
// (ids: _) = (error)
// 
// (auto: fn (fn a -> a) -> a) ((x: fn a -> a)) = (x: fn a -> a) (error)
// 
// (auto_prime: fn (fn a -> a) -> a) ((x: fn a -> a)) = (x: fn a -> a) (x: fn a -> a)
// 
// (f5: _) = (auto: fn (fn _ -> _) -> _) (error)
// 
// (poly: fn (fn a -> a) -> a, a) ((f: fn a -> a)) =
//     (f: fn a -> a) 42 (,: fn a a -> a, a) (f: fn a -> a) true
// 
// (f9: _) =
//     (f: fn (fn (fn _ -> _) -> _, _) [_] -> _) = (revapp: fn _ [_] -> fn (fn (fn _ -> _) -> _, _) [_] -> _) (error)
//     (f: fn (fn (fn _ -> _) -> _, _) [_] -> _) (poly: fn (fn _ -> _) -> _, _)
// 
// (choose: fn a a -> a) ((x: a)) ((y: a)) = (x: a)
// 
// (a5: fn (fn _ -> _) -> _) = (id: fn (fn (fn _ -> _) -> _) -> fn (fn _ -> _) -> _) (auto: fn (fn _ -> _) -> _)
// 
// (a6: fn (fn _ -> _) -> _) = (id: fn (fn (fn _ -> _) -> _) -> fn (fn _ -> _) -> _) (auto_prime: fn (fn _ -> _) -> _)
// 
// (a6_: _) = (id: fn _ -> _) (error)
// 
// (a7: fn _ -> _) = (choose: fn (fn _ -> _) (fn _ -> _) -> fn _ -> _) (id: fn _ -> _) (auto: fn (fn _ -> _) -> _)

// expected stderr:
// examples/typechecking/impredicativity.an:4:8
// 4 | ids = [freeze id]	// error: Expected an expression but found `freeze`
//   |        ^^^^^^
// 
// examples/typechecking/impredicativity.an:6:36
//   | // error: Expected an expression but found `freeze`
// 6 | auto (x: forall a. fn a -> a) = x (freeze x)
//   |                                    ^^^^^^
// 
// examples/typechecking/impredicativity.an:8:41
//    | // error: Argument 1 has type fn a -> a but a was expected
//  8 | auto_prime (x: forall a. fn a -> a) = x x
//    |                                         ^
// 
// examples/typechecking/impredicativity.an:10:12
// 10 | f5 = auto (freeze id)	// error: Expected an expression but found `freeze`
//    |            ^^^^^^
// 
// examples/typechecking/impredicativity.an:16:7
// 15 | poly (f: forall a. fn a -> a) =
// 16 |     f 42, f true	// error: Argument 1 has type I32 but a was expected
//    |       ^^
// 
// examples/typechecking/impredicativity.an:16:13
// 15 | poly (f: forall a. fn a -> a) =
// 16 |     f 42, f true	// error: Argument 1 has type Bool but a was expected
//    |             ^^^^
// 
// examples/typechecking/impredicativity.an:19:9
// 18 | f9 =
// 19 |     f = revapp (freeze id)	// error: `revapp` not found in scope
//    |         ^^^^^^
// 20 |     f poly
// 
// examples/typechecking/impredicativity.an:19:17
// 18 | f9 =
// 19 |     f = revapp (freeze id)	// error: Expected an expression but found `freeze`
//    |                 ^^^^^^
// 20 |     f poly
// 
// examples/typechecking/impredicativity.an:26:11
// 25 | a6 = id auto_prime
// 26 | a6_ = id (freeze auto_prime)	// error: Expected an expression but found `freeze`
//    |           ^^^^^^
// 
// examples/typechecking/impredicativity.an:28:16
//    | // error: Argument 2 has type fn (fn _ -> _) -> _ but fn _ -> _ was expected
// 28 | a7 = choose id auto
//    |                ^^^^
// 
// Found 10 errors and 0 warnings

